--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+.payment-container {
+  background: #ffffff
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.checkout-button{
+  /* background-color: rgb(107, 183, 11); */
+  background-color: #4169E1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkout-button:hover{
+  transform: scale(1.05);
+  transition: all 0.3s ease 0s;
+  background-color: #4169E1;
 }
